# justTryGeminibyBigHeadFish

./: .gitignore  CMakeLists.txt  README.md
cudss/lib/: libcudss.so.0  libcudss_commlayer_nccl.so.0  libcudss_commlayer_nccl.so.0.7.1  libcudss_commlayer_openmpi.so.0  libcudss_commlayer_openmpi.so.0.7.1  libcudss_mtlayer_gomp.so.0  libcudss_mtlayer_gomp.so.0.7.1
cudss/lib/cmake/cudss/: cudss-config.cmake  cudss-static-targets-release.cmake  cudss-static-targets.cmake  cudss-targets-release.cmake  cudss-targets.cmake
docs/: earthstar_review.tex  physics_formulation.tex  physics_formulation_simple.tex
examples/cpp_test_02/: test_100khz.json  test_500hz.json  test_500hz_valid.json
examples/cpp_test_03/: DeepReading_500Hz.json  EarthStar_Benchmark.json  HighRes_2MHz.json  Shallow_Water_TTI.json  test_500hz.json
include/: analytical.h  assembler.h  config_types.h  exporter.h  physics_utils.h  solver.h  types.h
python/: lwd_solver.py
src/: analytical.cpp  assembler.cpp  config_loader.cpp  exporter.cpp  main.cpp  physics_utils.cpp  solver.cpp
